feat: add basic PersonalWebDesktop component with background image

--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,9 @@
     <title>Personal Web Desktop</title>
     <link rel="stylesheet" href="./styles/reset.css" />
     <link rel="icon" href="/favicon.ico" type="image/x-icon" />
+    <script type="module" src="./index.js"></script>
   </head>
   <body>
-    <h1>Hello, World!</h1>
+    <personal-web-desktop></personal-web-desktop>
   </body>
 </html>
