--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Personal Web Desktop</title>
+    <title>Windows XP</title>
     <link rel="stylesheet" href="./styles/reset.css" />
     <link rel="icon" href="/favicon.ico" type="image/x-icon" />
     <script type="module" src="./index.js"></script>
